--- a/index.html
+++ b/index.html
@@ -37,6 +37,21 @@
                 <input type="button" class="btn btn-config btn-lg" value="Contacts">
                 <input type="button" class="btn btn-config btn-lg" value="Appointment">
             </div>
+
+        </div>
+
+
+        <br><br>
+
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <div class="col-sm-6">
+                    <input type="button" class="btn btn-config btn-lg btn-block" value="Reset Counter">
+                </div>
+                <div class="col-sm-6">
+                    <input type="button" class="btn btn-config btn-lg btn-block" value="Send Count">
+                </div>
+            </div>
         </div>
     </div>
 
