--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
         </div>
     </div>
 
-    <script src="assets/jquery.js"></script>
+<!--    <script src="assets/jquery.js"></script>-->
     <script src="assets/bootstrap.min.js"></script>
 
     <script type="text/javascript">
-        var call_counts,contact_count,appoint_count;
+/*        var call_counts,contact_count,appoint_count;
         var cc = sessionStorage.getItem("call_counts");
         var cc2 = sessionStorage.getItem("contact_count");
         var ac = sessionStorage.getItem("appoint_count");
@@ -143,6 +143,7 @@
             $("#contact-count").html(contact_count);
             $("#appointment-count").html(appoint_count);
         }
+        */
     </script>
 </body>
 </html>
