--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
     </div>
 
-<!--    <script src="assets/jquery.js"></script>-->
+    <script src="assets/jquery.js"></script>
     <script src="assets/bootstrap.min.js"></script>
 
     <script type="text/javascript">
