--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
             $("body").on("click","#btn-send",function (e) {
 
 
+                alert("Message sent...");
 
 
                     var headers  = "From: Mortonsouth < no-reply@mortonsouth.com >\n";
